# sage-sanctum-sdk

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
api/: index.html
api/agent/: index.html
api/auth/: index.html
api/auth/credentials/: index.html
api/context/: index.html
api/errors/: index.html
api/gateway/: index.html
api/io/: index.html
api/llm/: index.html
api/mcp/: index.html
api/testing/: index.html
concepts/agents/: index.html
concepts/architecture/: index.html
concepts/authentication/: index.html
concepts/context/: index.html
concepts/io/: index.html
concepts/model-selection/: index.html
docs/: index.md
docs/api/: agent.md  context.md  errors.md  index.md
docs/concepts/: agents.md  architecture.md  authentication.md  context.md  io.md  model-selection.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: claude-code.md  configuration.md  error-handling.md  examples.md  testing.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/claude-code/: index.html
guides/configuration/: index.html
guides/error-handling/: index.html
guides/examples/: index.html
guides/testing/: index.html
search/: search_index.json
src/sage_sanctum/: __init__.py  agent.py  context.py  errors.py  logging.py
tests/: test_agent_runner.py  test_context.py  test_errors.py  test_gateway_chat.py  test_gateway_client.py  test_gateway_embeddings.py  test_gateway_http.py  test_hypothesis.py  test_io.py  test_mcp.py  test_mocks.py  test_model_ref.py  test_model_selector.py  test_spiffe.py  test_trat.py
(+54 files in other folders)
