[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sage-sanctum-sdk"
version = "0.2.2"
description = "SDK for building agents that run within Sage Sanctum infrastructure"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Sage Security"}
]
keywords = ["sage-sanctum", "agent-sdk", "spiffe", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "pydantic>=2.0.0",
    "urllib3>=2.0.0",
    "litellm>=1.30.0",
    "langchain-core>=0.3.0",
    "langchain-litellm>=0.2.0",
]

[project.urls]
Homepage = "https://sagesecurity.ai"
Repository = "https://github.com/SapphireBeehiveStudios/sage-sanctum-sdk"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.100.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["sage_sanctum*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "mutmut>=3.4.0",
]
